--- a/style.css
+++ b/style.css
@@ -1,63 +1,81 @@
 * {
     box-sizing: border-box;
     font-family: 'PT Sans', sans-serif;
-    color: rgb(255, 255, 255);
-  }
+}
+
+:root {
+    --primary-color: #182243;
+    --secondary-color: #EF502D;
+    --tertiary-color: #42BA87;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
   
-  h1 {
-    font-size: 7vw;
+h1 {
+    font-size: 5rem;
     font-family: 'Cinzel', serif;
-  }
+    font-weight: 700;
+}
   
-  h2 {
-    font-family: 'Spectral', serif;
-  }
-  
-  p, label {
-    font-size: 1.5vw;
-  }
-  
-  legend {
-    font-size: 1.7vw;
-    font-weight: bold;
-  }
-  
-  fieldset {
-    border: 0;
-  }
-  
-  html {
-    background: url('https://media.graytvinc.com/images/810*455/313_COvid19_MGN.jpg') no-repeat center center fixed;
-    background-size: cover;
-    opacity: 2.5;
-  }
-  
-  main {
-    padding-left: 10vw;
-    padding-right: 10vw;
-  }
-  
-  section {
-    vertical-align: top;
-  }
-  
-  input[type="radio"] {
-    vertical-align: middle;
-    margin-right: 2px; 
-  }
-  
-  label {
-    vertical-align: middle;
-  }
-  
-  header {
-      padding: 5px;
-      text-align: center;
-      font-size: 25px;
-      color: rgb(255, 255, 255);
-      line-height: 25px;
-      margin-bottom: 0;
-  }
+h2 {
+  font-family: 'Spectral', serif;
+  font-weight: 800;
+}
+
+.intro-container {
+  background: #fff;
+}
+
+p, label {
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #fff;
+}
+
+legend {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+fieldset {
+  border: 0;
+}
+
+html {
+  background: url('./img/bg.jpg') no-repeat center center fixed;
+  background-size: cover;
+  opacity: 2.5;
+}
+
+main {
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+
+section {
+  vertical-align: top;
+}
+
+input[type="radio"] {
+  vertical-align: middle;
+  margin-right: 2px; 
+}
+
+label {
+  vertical-align: middle;
+}
+
+header {
+    padding: 5px;
+    text-align: center;
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    line-height: 25px;
+    margin-bottom: 0;
+}
   
   img {
     vertical-align: top;
