--- a/style.css
+++ b/style.css
@@ -25,15 +25,11 @@ h2 {
 	font-weight: 800;
 }
 
-.intro-container {
-	background: #fff;
-}
-
 p,
 label {
 	font-size: 1.5rem;
 	font-weight: 800;
-	color: #fff;
+	color: var(--primary-color);
 }
 
 legend {
@@ -89,7 +85,6 @@ img {
 button,
 input {
 	background: transparent;
-	/* color: rgb(250, 250, 250); */
 	border: rgb(182, 182, 168) solid 1px;
 	height: 45px;
 	padding: 0 16px;
@@ -99,12 +94,6 @@ input {
 	font-family: 'Spectral', serif;
 	cursor: pointer;
 }
-
-/* button:hover,
-input:hover {
-	background: rgb(255, 255, 255);
-	color: rgb(53, 54, 43);
-} */
 
 .intro-text {
   color: #000;
