--- a/style.css
+++ b/style.css
@@ -38,6 +38,21 @@ h4 {
   font-weight: 300;
 }
 
+@media (max-width: 375px) {
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 15px;
+  }
+  h4 {
+    font-size: 12px;
+  }
+}
+
 p {
   font-size: 1.5rem;
   font-weight: 800;
@@ -163,7 +178,8 @@ input {
 }
 
 .ql-container {
-  padding: auto;
+ font-weight: bolder;
+ color: var(--white);
 }
 
 .option-list {
@@ -222,7 +238,6 @@ input {
 
 
 @media (max-width: 980px) {
-
   p,
   label,
   legend {
@@ -234,5 +249,34 @@ input {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+  }
+}
+
+@media (max-width: 375px) {
+  .q-title {
+    top: 20%;
+    margin: 0 auto;
+  }
+
+  .q-subheader {
+    top: 8%;
+    left: 48%;
+  }
+
+  .intro-container {
+    margin: 0 auto;
+    width: 70%;
+    left: 20%;
+    top: 55%;
+  }
+
+  .intro-text {
+    color: var(--black);
+  }
+
+  .question-container {
+    width: 93%;
+    left: 15%;
+    top: 18%;
   }
 }
