--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 
 :root {
   --primary-color: #182243;
-  --secondary-color: #ef502d;
-  --tertiary-color: #1e9c68;
+  --secondary-color: #f35835;
+  --tertiary-color: #0fe28a;
   --white: rgb(246, 246, 246);
   --black: rgb(14, 12, 12);
 }
@@ -36,6 +36,42 @@ h3 {
 
 h4 {
   font-weight: 300;
+}
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+
+  h3 {
+    font-size: 15px;
+  }
+
+  h4 {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    font-size: 25px;
+  }
+
+  h3 {
+    font-size: 10px;
+  }
+
+  h4 {
+    font-size: 10px;
+  }
 }
 
 @media (max-width: 375px) {
@@ -165,7 +201,7 @@ input {
 .question-container {
   position: absolute;
   width: 40%;
-  height: 100px;
+  height: 578px;
   left: 10%;
   top: 28%;
   margin-left: -50px;
@@ -178,6 +214,7 @@ input {
 }
 
 .ql-container {
+  font-size: 1.5em;
  font-weight: bolder;
  color: var(--white);
 }
@@ -189,7 +226,7 @@ input {
 .feedback-container {
   position: absolute;
   width: 40%;
-  height: 100px;
+  height: 270px;
   left: 10%;
   top: 50%;
   margin-left: -50px;
@@ -200,7 +237,7 @@ input {
 .correct-answer {
   color: var(--white);
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
 }
 
 .final-container {
@@ -236,7 +273,6 @@ input {
   text-transform: uppercase;
 }
 
-
 @media (max-width: 980px) {
   p,
   label,
@@ -249,6 +285,91 @@ input {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+  }
+}
+
+@media (max-width: 767px) {
+  .q-title {
+    top: 20%;
+    left: 25%;
+    margin: 0 auto;
+  }
+
+  .q-subheader {
+    top: 8%;
+    left: 45%;
+  }
+
+  .intro-container {
+    margin: 0 auto;
+    width: 44%;
+    left: 28%;
+    top: 55%;
+  }
+
+  .intro-text {
+    color: var(--black);
+  }
+
+  .question-container {
+    width: 80%;
+    left: 15%;
+    top: 25%;
+  }
+
+  .feedback-container {
+    width: 60%;
+    left: 30%;
+    top: 30%;
+  }
+
+  .final-container {
+    width: 70%;
+    left: 27%;
+    top: 26%;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .q-title {
+    top: 20%;
+    left: 6%;
+    margin: 0 auto;
+  }
+
+  .q-subheader {
+    top: 8%;
+    left: 50%;
+  }
+
+  .intro-container {
+    margin: 0 auto;
+    width: 60%;
+    left: 20%;
+    top: 55%;
+  }
+
+  .intro-text {
+    color: var(--black);
+  }
+
+  .question-container {
+    width: 93%;
+    left: 15%;
+    top: 18%;
+  }
+
+  .feedback-container {
+    width: 75%;
+    left: 25%;
+    top: 26%;
+  }
+
+  .final-container {
+    width: 70%;
+    left: 27%;
+    top: 26%;
   }
 }
 
@@ -278,5 +399,11 @@ input {
     width: 93%;
     left: 15%;
     top: 18%;
+  }
+
+  .feedback-container {
+    width: 75%;
+    left: 25%;
+    top: 26%;
   }
 }
